--- a/manifest.json
+++ b/manifest.json
@@ -6,6 +6,10 @@
 					Just double click the word and get the information you seek.", 
 	"version" : "1.0",
 
+  "background" : {
+    "scripts" : ["background.js"]
+  },
+
 	"browser_action" : {
   	"default_popup" : "Wiki_Viewer.html",
     "default_title" : "QWiki"
@@ -28,6 +32,7 @@
 
 	"permissions" : [
 		"activeTab",
+    "contextMenus",
     "https://en.wikipedia.org/*"
 	]
 }	
