--- a/manifest.json
+++ b/manifest.json
@@ -1,36 +1,44 @@
 {
-	"manifest_version" : 2,
+	"manifest_version": 2,
 
-	"name" : "QWiki",
-	"description" : "Don't know what that word is? Want to know more about some term on a page?
+	"name": "QWiki",
+	"description": "Don't know what that word is? Want to know more about some term on a page?
 					Just double click the word and get the information you seek.", 
-	"version" : "1.0",
+	"version": "1.0",
 
-  "background" : {
-    "scripts" : ["background.js"]
+  "background": {
+    "scripts": ["background.js"]
   },
 
-	"browser_action" : {
-  	"default_popup" : "Wiki_Viewer.html",
-    "default_title" : "QWiki"
+	"browser_action": {
+  	"default_popup": "Wiki_Viewer.html",
+    "default_title": "QWiki"
 	},
 	
-  "content_scripts" : [{
+  "content_scripts": [{
   	"css": ["inject.css"],
     "matches": ["http://*/*" , "https://*/*"],
     "js" : ["jquery.min.js" , "inject.js"]
   }],
 
   "commands": {
+    
     "_execute_browser_action": {
       "suggested_key": {
         "default": "Alt+Q"
       },
       "description": "open popup"
+    },
+
+    "side_panel": {
+      "suggested_key": {
+        "default": "Alt+Shift+Y"
+      },
+      "description": "open side panel"
     }
   },
 
-	"permissions" : [
+	"permissions": [
 		"activeTab",
     "contextMenus",
     "https://en.wikipedia.org/*"
