--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 2,
 
   "name": "QWiki",
-  "description": "Don't know what that word is? Want to know more about some term on a page? Just double click the word and get the information you seek.", 
+  "description": "Search for any word or a string of words on your current page and get information about it directly from Wikipedia",
   "version": "1.0",
 
   "background": {
