added icons to manifest

--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,9 @@
   "browser_action": {
     "default_popup": "Wiki_Viewer.html",
     "default_title": "QWiki",
-    "default_icon": "images/icon16.png"
+    "default_icon": { "16": "images/icon16.png",
+                      "48": "images/icon48.png",
+                      "128": "images/icon128.png" }
   },
 
   "content_scripts": [{
