--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 2,
 
   "name": "QWiki",
-  "description": "Search for any word or a string of words on your current page and get information about it directly from Wikipedia",
+  "description": "Search for any word or a string of words on your current page from Wikipedia without leaving the page",
   "version": "1.0",
 
   "background": {
