--- a/manifest.json
+++ b/manifest.json
@@ -40,10 +40,13 @@
     }
   },
 
+  "options_page": "options.html",
+
   "permissions": [
     "activeTab",
     "tabs",
     "contextMenus",
-    "https://en.wikipedia.org/*"
+    "https://en.wikipedia.org/*",
+    "storage"
   ]
 }	
